# ImagEncrypt

./: CMakeLists.txt  README.md
src/: files.cpp  main.cpp  password_generator.cpp  vernam_cipher.cpp
src/headers/: files.h  options.h  password_generator.h  vernam_cipher.h
